--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
-  displayname: Publish
+  displayName: Publish
   inputs:
     targetPath: '$build.artifactstagingdirectory'
     artifactName: drop
