Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,51 +17,55 @@ variables:
   buildConfiguration: 'Release'
   RestoreProjects: 'HomeMaintenanceNotification.csproj'
 
-steps:
-- task: UseDotNet@2
-  displayName: Use .NET Core SDK 8
-  inputs:
-    packageType: 'sdk'
-    version: '8.x'
+jobs:
+- job: Windows
+  pool:
+    vmImage: 'windows-latest'
+  steps:
+  - task: UseDotNet@2
+    displayName: Use .NET Core SDK 8
+    inputs:
+      packageType: 'sdk'
+      version: '8.x'
 
-- task: DotNetCoreCLI@2
-  displayName: Restore
-  inputs:
-    command: restore
-    projects: $(RestoreProjects)
+  - task: DotNetCoreCLI@2
+    displayName: Restore
+    inputs:
+      command: restore
+      projects: $(RestoreProjects)
 
-- task: DotNetCoreCLI@2
-  displayName: Build
-  inputs:
-    command: build
-    projects: $(RestoreProjects)
-    arguments: '--configuration $(buildConfiguration)'
+  - task: DotNetCoreCLI@2
+    displayName: Build
+    inputs:
+      command: build
+      projects: $(RestoreProjects)
+      arguments: '--configuration $(buildConfiguration)'
 
-- task: DotNetCoreCLI@2
-  displayName: Publish
-  inputs:
-    targetPath: '$build.artifactstagingdirectory'
-    artifactName: drop
-  condition: succeeded()
+  - task: DotNetCoreCLI@2
+    displayName: Publish
+    inputs:
+      targetPath: '$build.artifactstagingdirectory'
+      artifactName: drop
+    condition: succeeded()
 
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: 'current'
-    artifactName: 'drop'
-    targetPath: $(Pipeline.workspace)
+  - task: DownloadPipelineArtifact@2
+    inputs:
+      buildType: 'current'
+      artifactName: 'drop'
+      targetPath: $(Pipeline.workspace)
 
 
-- task: AzureFunctionApp@1
-  displayName: DeployFunction
-  inputs:
-    azureSubscription: $(serviceConnection)
-    appType: 'functionapp'
-    appName: $(functionName)
-    deployToSlotOrASE: true
-    resourceGroupName: $(resourceGroup)
-    slotName: 'production'
-    package: '$(Pipeline.workspace)/HomeMaintenanceNotification.zip'
-    AppSettings: >-
-     -ASPNET_ENVIRONMENT "Production"
-    deploymentMethod: 'auto'
+  - task: AzureFunctionApp@1
+    displayName: DeployFunction
+    inputs:
+      azureSubscription: 'AzureDevOpsToAzure'
+      appType: 'functionapp'
+      appName: $(functionName)
+      deployToSlotOrASE: true
+      resourceGroupName: $(resourceGroup)
+      slotName: 'production'
+      package: '$(Pipeline.workspace)/HomeMaintenanceNotification.zip'
+      AppSettings: >-
+        -ASPNET_ENVIRONMENT "Production"
+        deploymentMethod: 'auto'
   
