Uncomment remaining tasks

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,38 +32,37 @@ steps:
     command: restore
     projects: $(RestoreProjects)
 
-#  - task: DotNetCoreCLI@2
-#    displayName: Build
-#    inputs:
-#      command: build
-#      projects: $(RestoreProjects)
-#      arguments: '--configuration $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  displayName: Build
+  inputs:
+    command: build
+    projects: $(RestoreProjects)
+    arguments: '--configuration $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  displayName: Publish
+  inputs:
+    targetPath: '$build.artifactstagingdirectory'
+    artifactName: drop
+    condition: succeeded()
 
-#  - task: DotNetCoreCLI@2
-#    displayName: Publish
-#    inputs:
-#      targetPath: '$build.artifactstagingdirectory'
-#      artifactName: drop
-#    condition: succeeded()
-
-#  - task: DownloadPipelineArtifact@2
-#    inputs:
-#      buildType: 'current'
-#      artifactName: 'drop'
-#      targetPath: $(Pipeline.workspace)
+- task: DownloadPipelineArtifact@2
+  inputs:
+    buildType: 'current'
+    artifactName: 'drop'
+    targetPath: $(Pipeline.workspace)
 
 
-#  - task: AzureFunctionApp@1
-#    displayName: DeployFunction
-#    inputs:
-#      azureSubscription: 'AzureDevOpsToAzure'
-#      appType: 'functionapp'
-#      appName: $(functionName)
-#      deployToSlotOrASE: true
-#      resourceGroupName: $(resourceGroup)
-#      slotName: 'production'
-#      package: '$(Pipeline.workspace)/HomeMaintenanceNotification.zip'
-#      AppSettings: >-
-#        -ASPNET_ENVIRONMENT "Production"
-#        deploymentMethod: 'auto'
+- task: AzureFunctionApp@1
+  displayName: DeployFunction
+  inputs:
+    azureSubscription: 'AzureDevOpsToAzure'
+    appType: 'functionapp'
+    appName: $(functionName)
+    deployToSlotOrASE: true
+    resourceGroupName: $(resourceGroup)
+    slotName: 'production'
+    package: '$(Pipeline.workspace)/HomeMaintenanceNotification.zip'
+    AppSettings: >-
+      -ASPNET_ENVIRONMENT "Production"
+      deploymentMethod: 'auto'
   
