--- a/template-build-steps.yml
+++ b/template-build-steps.yml
@@ -28,7 +28,7 @@ steps:
   displayName: Publish  
   inputs:
     command: 'publish'
-    publishWebProjects: true
+    publishWebProjects: false
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)' 
 
 - task: PublishBuildArtifacts@1
