Fixed directory to find function app to deploy

--- a/template-deploy-stage.yml
+++ b/template-deploy-stage.yml
@@ -41,7 +41,7 @@ stages:
                    deployToSlotOrASE: true
                    resourceGroupName: ${{ parameters.resourceGroup }}
                    slotName: 'production'
-                   package: '$(Pipeline.workspace)/HomeMaintenanceNotification.zip'
+                   package: '$(Pipeline.workspace)/webapp_build/*.zip'
                    AppSettings: >-
                      -ASPNET_ENVIRONMENT "Production"
                      -HomeMaintenanceAPIEndpoint "$(HomeMaintenanceAPIEndpoint)
