Added required configuration to deployment task

--- a/template-deploy-stage.yml
+++ b/template-deploy-stage.yml
@@ -45,4 +45,10 @@ stages:
                    AppSettings: >-
                      -ASPNET_ENVIRONMENT "Production"
                      -HomeMaintenanceAPIEndpoint "$(HomeMaintenanceAPIEndpoint)
+                     -fromEmail "$(fromEmail)"
+                     -fromName "$(fromName)"
+                     -recipientEmail "$(recipientEmail)"
+                     -recipientName "$(recipientName)"
+                     -sendGridApiKey "$(sendGridApiKey)"
+                     -templateId "$(templateId)"
                    deploymentMethod: 'auto'
